# ROS2-Gesture-Detection

./: README.md  未命名绘图.drawio
install/: local_setup.sh  setup.sh
install/camera_pkg/lib/camera_pkg/: camera_node
install/camera_pkg/share/camera_pkg/: package.dsv  package.ps1  package.sh  package.xml
install/perception_pkg/lib/perception_pkg/: perception_node
install/perception_pkg/share/perception_pkg/: package.sh  package.xml
install/visualization_pkg/lib/visualization_pkg/: visualization_node
install/visualization_pkg/share/visualization_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/launch/: camera_perception_viz.launch.py
src/perception_pkg/: package.xml  setup.py
src/visualization_pkg/: package.xml  setup.py
src/visualization_pkg/visualization_pkg/: visualization_node.py
