<package format="3">
  <name>camera_pkg</name>
  <version>0.1.0</version>
  <description>A simple camera node for ROS 2.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
  <export>
    <launch/>
  </export>
</package>
